2004-02-13  Federico Mena Quintero  <federico@ximian.com>

	Fix #129020.

	* gtk/gtkfilechooserdialog.c
	(set_default_size): New function, sets a reasonable default size
	for the window.
	(gtk_file_chooser_dialog_realize): New function, call
	set_default_size().
	(gtk_file_chooser_dialog_style_set): Likewise.
	(gtk_file_chooser_dialog_screen_changed): Likewise.

	* tests/testfilechooser.c (main): Don't set a default size for the
	dialog.

Sat Feb 14 00:05:18 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktreemodelfilter.c (bsearch_elt_with_offset): 
	Use do instead of while.  (#134031, Morten Welinder);

Sat Feb 14 00:00:52 2004  Matthias Clasen  <maclas@gmx.de>

	* configure.in: Suppress xsltproc and xmlcatalog checks
	if enable_man=no.  (#134162, Julio M. Merino Vidal)

Fri Feb 13 23:54:48 2004  Matthias Clasen  <maclas@gmx.de>

	* configure.in: Remove checks for sgml2html. It was once
	used for building the linuxdoc version of the tutorial.
	Nowadays, we use db2html.  (#134164, Julio M. Merino Vidal)

Fri Feb 13 08:17:43 2004  Owen Taylor  <otaylor@redhat.com>

	Fix various compilation problems (#134312, David
	Hawthorne)

	* gtk/gtkscale.c (gtk_scale_get_layout_offsets): Use 
	g_return_if_fail(), not g_return_val_if_fail().

	* gtk/gtkvscale.c (gtk_vscale_get_layout_offsets): 
	* gtk/gtkhscale.c (gtk_hscale_get_layout_offsets): Use 
	g_return_if_reached(), not g_return_val_if_reached().
	
	* gtk/gtkvscale.c (gtk_vscale_expose): Fix the types
	of some parameters.

	* gtk/gtkhscale.c (gtk_hscale_get_layout_offsets): Remove
	extra 'scale' parameter.

Thu Feb 12 21:58:20 2004  Owen Taylor  <otaylor@redhat.com>

        Various reentrancy fixes for widgets being destroyed
	out of focus-out-event. (#128821, Grant Gayed)

	* gtk/gtkwindow.c (_gtk_window_unset_focus_and_default): 
	Ref window and widget over callbacks.

	* gtk/gtkwidget.c (gtk_widget_hide)
	  gtk/gtkwidget.c (gtk_widget_set_child_visible):